examples/avr_usart/evaluation/without_constraints/avr_usart_read/test000001.kquery
array size[4] : w32 -> w8 = symbolic
(query [(Eq false
             (Eq 1
                 (ReadLSB w32 0 size)))]
        false)
